--- a/aphroditeweb/src/index.html
+++ b/aphroditeweb/src/index.html
@@ -18,7 +18,7 @@
 
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="//unpkg.com/slick-carousel@1.8.1/slick/slick.js"></script>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
   </head>
   <body>
     <app-root></app-root>
